--- a/Hermione.html
+++ b/Hermione.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="home.html"><button>Back to HOMEPAGE</button></a>
+    <a href="index.html"><button>Back to HOMEPAGE</button></a>
     <h1>Hermione Jean Granger</h1>
     <h3>date of birth: 19th of September 1979</h3>
     <h3>zodiac sign: Virgo</h3>
