--- a/harry.html
+++ b/harry.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="home.html"><button>Back to HOMEPAGE</button></a>
+    <a href="index.html"><button>Back to HOMEPAGE</button></a>
 
     <h1>Harry James Potter</h1>
     <h3>date of birth: 31st of July 1980</h3>
