--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li>
         Hermionie Granger | <a href="Hermione.html">hermnioie Granger page </a>
       </li>
+      <li><a href="tabels.html">Tables</a></li>
       
     </ul>
     <table></table>
